# QuasiDipole

./: .gitignore  CMakeLists.txt  README.md  main.c  quasidipole.c
Docker/: Dockerfile  docker-build-deploy.sh  docker-build-dev.sh  docker-buildx-push.sh  docker-setup-dev-container.sh
include/: quasidipole.h
